health: Introduce health and version endpoint
